wildcard certificates should be set to disabled as a default

--- a/argocd-helm-charts/cert-manager/values.yaml
+++ b/argocd-helm-charts/cert-manager/values.yaml
@@ -38,3 +38,6 @@ issuer:
   preferredChain: null
 networkpolicies: false
 enableCertificateOwnerRef: true
+
+wildcardCertificates:
+  enabled: false
