feat: Add middleware for IP allowlist in puppetserver ingress route
Signed-off-by: Shubham Gupta <sgupta@obmondo.com>

--- a/argocd-helm-charts/puppetserver/templates/ingressroutetcp.yaml
+++ b/argocd-helm-charts/puppetserver/templates/ingressroutetcp.yaml
@@ -11,5 +11,12 @@ spec:
     services:
     - name: puppetserver-{{ .Values.customerid }}-puppet
       port: puppetserver
+  - match: HostSNI(`{{ .Values.customerid }}.puppetdb.obmondo.com`)
+    priority: 10
+    services:
+    - name: puppetserver-{{ .Values.customerid }}-puppetdb
+      port: pdb-https
+    middlewares:
+      - name: middleware-{{ .Values.customerid }}
   tls:
     passthrough: true
