refactor: Update IP allowlist in puppetserver middleware.yaml
Signed-off-by: Shubham Gupta <sgupta@obmondo.com>

--- a/argocd-helm-charts/puppetserver/templates/middleware.yaml
+++ b/argocd-helm-charts/puppetserver/templates/middleware.yaml
@@ -5,15 +5,6 @@ metadata:
 spec:
   ipAllowList:
     sourceRange:
-      - "135.181.21.167"
-      - "135.181.21.154"
-      - "135.181.21.153"
-      - "135.181.223.235"
-      - "65.21.130.86"
-      - "65.21.130.85"
-      - "78.46.72.21"
-      - "176.9.124.207"
-      - "85.10.211.48"
-      - "138.201.82.121"
-      - "138.201.224.126"
-      - "172.20.0.0/16"
+      {{- range .Values.ipAllowedList }}
+      - "{{ . }}"
+      {{- end }}
