refactor: Update TCP ingress route for puppetdb to use new domain name
Signed-off-by: Shubham Gupta <sgupta@obmondo.com>

--- a/argocd-helm-charts/puppetserver/templates/ingressroutetcp-puppetdb.yaml
+++ b/argocd-helm-charts/puppetserver/templates/ingressroutetcp-puppetdb.yaml
@@ -6,7 +6,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-  - match: HostSNI(`{{ .Values.customerid }}.puppetdb.enableit.dk`)
+  - match: HostSNI(`{{ .Values.customerid }}.puppetdb.obmondo.com`)
     priority: 10
     services:
     - name: puppetserver-{{ .Values.customerid }}-puppetdb
