[CI] Helm Chart Update cerebro

--- a/argocd-helm-charts/cerebro/charts/cerebro/templates/secret.yaml
+++ b/argocd-helm-charts/cerebro/charts/cerebro/templates/secret.yaml
@@ -74,6 +74,15 @@ stringData:
       {
         host = {{ $element.host | quote }}
         name = {{ $element.name | quote }}
+        {{- if $element.headersWhitelist }}
+        headers-whitelist = {{ $element.headersWhitelist | toJson }}
+        {{- end }}
+        {{- if $element.auth }}
+        auth = {
+          username = {{ $element.auth.username | quote }}
+          password = {{ $element.auth.password | quote }}
+        }
+        {{- end }}
       }
       {{- end }}
     ]
