--- a/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/templates/deployment.yaml
+++ b/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/templates/deployment.yaml
@@ -85,6 +85,9 @@ spec:
           periodSeconds: {{ default 10 .Values.livenessProbe.periodSeconds }}
           successThreshold: {{ default 1 .Values.livenessProbe.successThreshold }}
           failureThreshold: {{ default 3 .Values.livenessProbe.failureThreshold }}
+          {{- if .Values.livenessProbe.terminationGracePeriodSeconds }}
+          terminationGracePeriodSeconds: {{ .Values.livenessProbe.terminationGracePeriodSeconds }}
+          {{- end }}
         readinessProbe:
           exec:
             command: ["/usr/bin/pgrep","gitlab.*runner"]
