--- a/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/values.yaml
+++ b/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/values.yaml
@@ -45,6 +45,7 @@ livenessProbe: {}
 #   periodSeconds: 10
 #   successThreshold: 1
 #   failureThreshold: 3
+#   terminationGracePeriodSeconds: 30
 
 ## Configure the readinessProbe
 readinessProbe: {}
