--- a/argocd-helm-charts/postgres-operator/charts/postgres-operator/templates/deployment.yaml
+++ b/argocd-helm-charts/postgres-operator/charts/postgres-operator/templates/deployment.yaml
@@ -53,6 +53,9 @@ spec:
         - name: CONTROLLER_ID
           value: {{ template "postgres-operator.controllerID" . }}
       {{- end }}
+      {{- if .Values.extraEnvs }}
+      {{- .Values.extraEnvs | toYaml | nindent 12 }}
+      {{- end }}
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         securityContext:
