--- a/argocd-helm-charts/capi-cluster/charts/azure/templates/AzureClusterIdentity.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/azure/templates/AzureClusterIdentity.yaml
@@ -6,6 +6,7 @@ metadata:
   name: {{ .Values.global.clusterName }}-cluster-identity
   namespace: {{ .Release.Namespace }}
 spec:
+  type: WorkloadIdentity
   allowedNamespaces: 
     list:
       - {{ .Release.Namespace }}
