--- a/argocd-helm-charts/capi-cluster/charts/azure/templates/AzureManagedControlPlane.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/azure/templates/AzureManagedControlPlane.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.managedCluster }}
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: AzureManagedControlPlane
 metadata:
@@ -32,3 +33,4 @@ spec:
   identityRef:
     name: {{ .Values.global.clusterName }}-cluster-identity
     kind: AzureClusterIdentity
+{{- end }}
