Added subchart info in chart.yaml
Signed-off-by: Devesh Sharma <devesh@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/Chart.yaml
+++ b/argocd-helm-charts/capi-cluster/Chart.yaml
@@ -12,3 +12,7 @@ dependencies:
     version: 1.0.0
     repository: 'file://charts/aws'
     condition: provider.aws
+  - name: azure
+    version: 1.0.0
+    repository: 'file://charts/azure'
+    condition: provider.azure
