--- a/argocd-helm-charts/capi-cluster/charts/azure/templates/SelfSystemMachinePool.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/azure/templates/SelfSystemMachinePool.yaml
@@ -1,10 +1,12 @@
 {{- if .Values.selfManagedCluster.enabled }}
+{{- $pools := list "vmu" "vmus" }}
+{{- range $index, $pool := $pools }}
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: MachinePool
 metadata:
   labels:
     cluster.x-k8s.io/cluster-name: {{ .Values.global.clusterName }}
-  name: {{ .Values.global.clusterName }}-vmu-0
+  name: {{ .Values.global.clusterName }}-{{ $pool }}-0
   namespace: {{ .Release.Namespace }}
 spec:
   clusterName: {{ .Values.global.clusterName }}
@@ -27,33 +29,4 @@ spec:
         name: spool1
       version: {{ .Values.global.kubernetes.version }}
 {{- end }}
----
-{{- if .Values.selfManagedCluster.enabled }}
-apiVersion: cluster.x-k8s.io/v1beta1
-kind: MachinePool
-metadata:
-  labels:
-    cluster.x-k8s.io/cluster-name: {{ .Values.global.clusterName }}
-  name: {{ .Values.global.clusterName }}-vmus-0
-  namespace: {{ .Release.Namespace }}
-spec:
-  clusterName: {{ .Values.global.clusterName }}
-  failureDomains:
-    - "1"
-    - "3"
-  replicas: 3
-  template:
-    spec:
-      clusterName: {{ .Values.global.clusterName }}
-      bootstrap:
-        configRef:
-          apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
-          kind: KubeadmConfigTemplate
-          name: {{ .Values.global.clusterName }}-md-0
-      clusterName: {{ .Values.global.clusterName }}
-      infrastructureRef:
-        apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
-        kind: AzureMachinePool
-        name: spool1
-      version: {{ .Values.global.kubernetes.version }}
 {{- end }}
