fixed machineDeployment SystemManagedMachiePool
Signed-off-by: Devesh Sharma <devesh@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/azure/templates/MachineDeployment.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/azure/templates/MachineDeployment.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.selfManagedCluster.enabled }}
-{{- $global := . }}  # Capture the global context
+{{- $global := . }}
 {{- range $index, $element := until 3 }}
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: MachineDeployment
