--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalHost.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalHost.yaml
@@ -1,4 +1,4 @@
-{{- range $key, $value := .Values.nodes }}
+{{- range $key, $value := .Values.hetzner.nodes }}
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: HetznerBareMetalHost
 metadata:
